# trading-alpaca-backend

./: .env.example  .gitignore  Dockerfile  README.md  app.py  compose.yml  config.py  pyproject.toml  requirements.txt
controllers/: __init__.py  trading_controller.py  websocket_controller.py
db/: mongo.py
models/: __init__.py  account.py  market_symbol.py  order.py  position.py  user.py
routes/: __init__.py  auth_routes.py  favorites_router.py  news_routes.py  order_routes.py  preferences_router.py  screener_routes.py  trading_routes.py  user_routes.py
services/: __init__.py  alpaca_service.py  fair_value_service.py  market_data_service.py  market_screener_service.py  market_symbol_service.py  news_scraper_service.py  swing_alpaca.py  swing_bot_service.py  swing_strategy_service.py  symbol_preferences_service.py  trading_service.py  trend_detection_service.py  trend_preferences_service.py
sockets/: ws_events.py
static/css/: styles.css
static/js/: chart.js  trading.js  websocket.js
templates/: base.html  dashboard.html  error.html
templates/components/: account_info.html  chart.html  order_form.html
tests/: __init__.py  conftest.py  test_alpaca_integration.py  test_models.py
utils/: auth_utils.py  security.py
